--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "mysql": "^2.18.1",
+    "mysql-migrations": "^1.0.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/server.js",
-    "start-dev": "nodemon ./src/server.js"
+    "start-dev": "nodemon ./src/server.js",
+    "migration": "node ./src/conf/Migration.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  
   "devDependencies": {
     "nodemon": "^2.0.19"
   }
 }
-
-
