--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
+    "joi": "^17.6.0",
     "mysql": "^2.18.1",
-    "mysql-migrations": "^1.0.7"
+    "mysql-migrations": "^1.0.7",
+    "nanoid": "^3.2.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
