--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@hapi/hapi": "^20.2.2",
+    "@hapi/jwt": "^2.1.1",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "joi": "^17.6.0",
