--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/server.js",
     "start-dev": "nodemon ./src/server.js",
-    "migration": "node ./src/conf/Migration.js"
+    "migration": "node ./src/conf/Migration.js",
+    "start": "node ./src/server.js"
   },
   "keywords": [],
   "author": "",
